# rerun-importer-c3d

./: .gitignore  LICENSE  README.md  pyproject.toml
src/rerun_importer_c3d/: __init__.py  batch.py
test_data/: Static02.c3d  minimal.c3d  sample_trial.c3d
test_rrd/: minimal.rrd  sample.rrd
